Bug 359774 - Huge zoom values displayed in empty digrams
Summary: Huge zoom values displayed in empty digrams
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.18.2 (KDE Applications 15.12.2)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-24 21:15 UTC by Ralf Habacker
Modified: 2016-02-24 21:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.18.3 (KDE Applications 15.12.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-02-24 21:15:55 UTC
Pressing "Fit" on empty diagrams or diagrams with only a few items shows very huge zoom values (reported by eklerka_777 at mail.ru)


Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. press "Fit" in the statusbar


Actual Results:  
A huge zoom value is displayed

Expected Results:  
A reasonable zoom value should be displayed.
Comment 1 Ralf Habacker 2016-02-24 21:20:59 UTC
Git commit 221067793e32f9e122927b12a74af83850c4d056 by Ralf Habacker.
Committed on 24/02/2016 at 21:21.
Pushed by habacker into branch 'Applications/15.12'.

Fix bug showing huge zoom values in case diagrams are empty or contains only a few items.
FIXED-IN:2.18.3 (KDE Applications 15.12.3)

M  +11   -1    umbrello/uml.cpp

http://commits.kde.org/umbrello/221067793e32f9e122927b12a74af83850c4d056