Fix bug showing huge zoom values in case diagrams are empty or contains only a few items.

BUG:359774
FIXED-IN:2.18.3 (KDE Applications 15.12.3)